--- a/TopValue/Features/Main/en.lproj/Main.storyboard
+++ b/TopValue/Features/Main/en.lproj/Main.storyboard
@@ -15,6 +15,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="barTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
                         <outlet property="mainTabbar" destination="zKw-rt-rnD" id="Msk-YU-9GR"/>
