--- a/TopValue/Features/Wishlist/Wishlist.storyboard
+++ b/TopValue/Features/Wishlist/Wishlist.storyboard
@@ -17,8 +17,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="02o-FO-LDF">
-                                <rect key="frame" x="0.0" y="59" width="393" height="759"/>
+                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="02o-FO-LDF">
+                                <rect key="frame" x="0.0" y="59" width="393" height="793"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </view>
                         </subviews>
@@ -26,9 +26,9 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="02o-FO-LDF" secondAttribute="trailing" id="JH9-cO-Z5M"/>
+                            <constraint firstAttribute="bottom" secondItem="02o-FO-LDF" secondAttribute="bottom" id="P9R-73-qxp"/>
                             <constraint firstItem="02o-FO-LDF" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="jJb-p1-too"/>
                             <constraint firstItem="02o-FO-LDF" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="lJM-oI-qep"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="02o-FO-LDF" secondAttribute="bottom" id="oSc-ap-gOT"/>
                         </constraints>
                     </view>
                     <connections>
@@ -37,7 +37,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="140" y="5"/>
+            <point key="canvasLocation" x="139.69465648854961" y="4.9295774647887329"/>
         </scene>
     </scenes>
     <resources>
