--- a/TopValue/en.lproj/LaunchScreen.storyboard
+++ b/TopValue/en.lproj/LaunchScreen.storyboard
@@ -5,7 +5,6 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -17,18 +16,21 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Top Value" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rsp-ZX-mep">
-                                <rect key="frame" x="85.333333333333329" y="396" width="222.33333333333337" height="60"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="50"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="splashScreenBottom" translatesAutoresizingMaskIntoConstraints="NO" id="Jng-ws-cO1">
+                                <rect key="frame" x="0.0" y="503" width="393" height="349"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="splashScreenLogo" translatesAutoresizingMaskIntoConstraints="NO" id="7Ve-SY-dAv">
+                                <rect key="frame" x="102.66666666666669" y="239" width="188" height="174"/>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="Rsp-ZX-mep" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="VOa-yP-ujV"/>
-                            <constraint firstItem="Rsp-ZX-mep" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="i8U-CE-vIe"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Jng-ws-cO1" secondAttribute="trailing" id="CwC-yw-gUz"/>
+                            <constraint firstItem="Jng-ws-cO1" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Hac-bn-ydr"/>
+                            <constraint firstItem="7Ve-SY-dAv" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="UJc-xW-IGb"/>
+                            <constraint firstAttribute="bottom" secondItem="Jng-ws-cO1" secondAttribute="bottom" id="fJr-kv-DcW"/>
+                            <constraint firstItem="7Ve-SY-dAv" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" constant="-100" id="fMX-U7-0Ks"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -38,8 +40,7 @@
         </scene>
     </scenes>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <image name="splashScreenBottom" width="430" height="349"/>
+        <image name="splashScreenLogo" width="188" height="174"/>
     </resources>
 </document>
